[gd_scene load_steps=10 format=3 uid="uid://cgwxc505nmthr"]

[ext_resource type="Script" path="res://Scripts/Controllers/AI/Enemies/CrabController.gd" id="1_50g5v"]
[ext_resource type="Texture2D" uid="uid://crnedjck8t7ib" path="res://Assets/Enemies/Crab/Crab.png" id="1_je1ak"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u6g5k"]
atlas = ExtResource("1_je1ak")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdt0u"]
atlas = ExtResource("1_je1ak")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o52rb"]
atlas = ExtResource("1_je1ak")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk6jg"]
atlas = ExtResource("1_je1ak")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ri3o5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6g5k")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdt0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o52rb")
}],
"loop": true,
"name": &"Moving",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk6jg")
}],
"loop": true,
"name": &"Pushed",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bxtah"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ouncq"]
radius = 9.0

[node name="Crab" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
gravity_scale = 0.0
lock_rotation = true
linear_damp = 4.0
script = ExtResource("1_50g5v")
States = ["Idle", "Moving"]
metadata/Pushed = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_ri3o5")
animation = &"Idle"
frame_progress = 0.270387

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bxtah")
debug_color = Color(0.629421, 0.508102, 0.422822, 0.42)

[node name="HitRange" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitoring = false
metadata/Pushable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitRange"]
shape = SubResource("CircleShape2D_ouncq")

[node name="AI_Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="HitRange" to="." method="_on_hit_range_body_entered"]
[connection signal="body_exited" from="HitRange" to="." method="_on_hit_range_body_exited"]
[connection signal="timeout" from="AI_Timer" to="." method="_on_ai_timer_timeout"]
